--- a/src/assets/i18n/es.resx
+++ b/src/assets/i18n/es.resx
@@ -1,4 +1,14 @@
 {
+    "report":{
+        "title_bar1":"Cobro por clientes",
+        "title_bar2":"Cobro mora por clientes",
+        "idCliente":"Cliente",
+        "numeroFactura":"Número Factura",
+        "fecha":"Fecha",
+        "descripcion":"Descripción",
+        "valor":"Valor",
+        "estado":"Estado"
+    },
     "Principal_Titulo_1": "BIENVENIDOS A GESTIÓN CARTERA IPS POLI",
     "Principal_Titulo_2": "El programa del Poli para realizar la gestión de las facturas para las IPS del país.",
     "Principal_form_Numero": "Número",
